feat: check likes
