# src/routes/private/comment.private.routes.ts
@@ -46,6 +46,7 @@ commentPrivateRoutes.delete(
 const likeCommentController = new LikeCommentController();
 commentPrivateRoutes.post("/:commentId/like", likeCommentController.likeComment);
 commentPrivateRoutes.post("/:commentId/dislike", likeCommentController.dislikeComment);
+commentPrivateRoutes.get("/:commentId/like-status", likeCommentController.likeStatus);
 
 
 export { commentPrivateRoutes };
